now compiles with and without module support

--- a/exampleProgram/CMakeLists.txt
+++ b/exampleProgram/CMakeLists.txt
@@ -5,9 +5,9 @@ SET(example1_src exampleProgram1.cpp)
 ADD_EXECUTABLE( exampleProgram ${example_src})
 ADD_EXECUTABLE( exampleProgram1 ${example1_src})
 #
-find_library(logger REQUIRED)
-include_directories(${logger_INCLUDE_DIRS})
-set(LIBS ${LIBS} ${logger_LIBRARIES})
+#find_library(logger REQUIRED)
+#include_directories(${logger_INCLUDE_DIRS})
+#set(LIBS ${LIBS} ${logger_LIBRARIES})
 TARGET_LINK_LIBRARIES(exampleProgram ${CPPJPLOGGER_LIB} pthread JPSemaphores)
 TARGET_LINK_LIBRARIES(exampleProgram1  ${CPPJPLOGGER_LIB} pthread JPSemaphores )
 
