Semaphore classes passed to jpCppLibs namespace Added doxygen documentation Updated files of documentation

--- a/exampleProgram/CMakeLists.txt
+++ b/exampleProgram/CMakeLists.txt
@@ -1,19 +1,19 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-SET(LOCAL_LIBS ../lib/)
-SET(LOCAL_INC ../include/)
-
-PROJECT(SemaphoresExamples)
-
-SET(EXECUTABLE_OUTPUT_PATH ../bin)
-
+#SET(LOCAL_LIBS ../lib/)
+#SET(LOCAL_INC ../include/)
+#
+#PROJECT(SemaphoresExamples)
+#
+#SET(EXECUTABLE_OUTPUT_PATH ../bin)
+#
 SET( LIBS ${LIBS} pthread)
-FIND_LIBRARY( LOGGER_LIBRARY NAMES logger
+FIND_LIBRARY( LOGGER_LIBRARY NAMES JPLoggerStatic
                 PATHS ${LOCAL_LIBS} ${INSTALL_LIBS} )
 SET( LIBS ${LIBS} ${LOGGER_LIBRARY})
-FIND_LIBRARY( JPSEMAPHORES_LIBRARY NAMES JPSemaphores
-                PATHS ${LOCAL_LIBS} ${INSTALL_LIBS} )
-SET( LIBS ${LIBS} ${JPSEMAPHORES_LIBRARY})
+#FIND_LIBRARY( JPSEMAPHORES_LIBRARY NAMES JPSemaphores
+#                PATHS ${LOCAL_LIBS} ${INSTALL_LIBS} )
+SET( LIBS ${LIBS} JPSemaphoresStatic )
 
 
 SET(example_src exampleProgram.cpp) 
@@ -24,6 +24,6 @@ ADD_EXECUTABLE( exampleProgram1 ${example1_src})
 #find_library(logger REQUIRED)
 #include_directories(${logger_INCLUDE_DIRS})
 #set(LIBS ${LIBS} ${logger_LIBRARIES})
-TARGET_LINK_LIBRARIES(exampleProgram ${LIBS} ${JPSEMAPHORES_LIBRARY} ${LOGGER_LIBRARY})
-TARGET_LINK_LIBRARIES(exampleProgram1  ${LIBS} ${JPSEMAPHORES_LIBRARY} ${LOGGER_LIBRARY})
+TARGET_LINK_LIBRARIES(exampleProgram ${LIBS} )
+TARGET_LINK_LIBRARIES(exampleProgram1  ${LIBS})
 
